Take 3 hours to center one (1) thing

--- a/index.html
+++ b/index.html
@@ -11,29 +11,32 @@
 </head>
 
 <body>
-<header>
-    <nav>
 
-    </nav>
+<header>
+    <p>nav nav navvy stuff</p>
 </header>
 <main>
-    <h1>Alexis Drai</h1>
+    <section id="me_cnt">
+        <h1 id="me">Alexis Drai</h1>
+    </section>
 </main>
-<footer></footer>
+<footer>
+    <p>yo yo yo</p>
+</footer>
 
 <script src="js/main.js"></script>
-<script>
-    window.ga = function () {
-        ga.q.push(arguments)
-    };
-    ga.q = [];
-    ga.l = +new Date;
-    ga('create', 'G-9GDHS1G21M', 'auto');
-    ga('set', 'anonymizeIp', true);
-    ga('set', 'transport', 'beacon');
-    ga('send', 'pageview')
-</script>
-<script src="https://www.google-analytics.com/analytics.js" async></script>
+<!--<script>-->
+<!--    window.ga = function () {-->
+<!--        ga.q.push(arguments)-->
+<!--    };-->
+<!--    ga.q = [];-->
+<!--    ga.l = +new Date;-->
+<!--    ga('create', 'G-9GDHS1G21M', 'auto');-->
+<!--    ga('set', 'anonymizeIp', true);-->
+<!--    ga('set', 'transport', 'beacon');-->
+<!--    ga('send', 'pageview')-->
+<!--</script>-->
+<!--<script src="https://www.google-analytics.com/analytics.js" async></script>-->
 </body>
 
 </html>
