Do TP2 skeleton

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Alexis Drai</title>
+    <title>Dev - Alexis Drai</title>
     <meta name="description"
           content="Get to know Alexis Drai through his work, personal projects, education, and insistence on using the Oxford comma">
     <meta name="viewport" content="width=device-width, initial-scale=1">
